# webmasteros-ollama-bridge

./: .gitignore  CHANGELOG.md  FIRST-RUN-CONFIG.md  INSTALLER-PLAN.md  LICENSE-NOTICE.md  README.md  RELEASES.md  REPO-SPLIT-PLAN.md  bridge.py  pyproject.toml  repo-metadata.json
.github/workflows/: windows-release.yml
config/: default-config.json
packaging/linux/: install-ollama-bridge.sh
packaging/macos/: install-ollama-bridge.command
packaging/windows/: README.md  WebmasterOSOllamaBridge.iss  build-windows-bridge.ps1  install-ollama-bridge.ps1  webmasteros-ollama-bridge.spec
